@@ -2,7 +2,7 @@
 #  ConfDB properties
 ###################################
 
-confdb.setupCount=4
+confdb.setupCount=5
 
 confdb0.dbSetup=HLT Development
 confdb0.dbType=oracle
@@ -11,29 +11,36 @@ confdb0.dbPort=10121
 confdb0.dbName=int2r_lb.cern.ch
 confdb0.dbUser=cms_hlt_writer
 
-confdb1.dbSetup=CMS Online (OMDS)
+confdb1.dbSetup=DAQ
 confdb1.dbType=oracle
-confdb1.dbHost=oracms.cern.ch
+confdb1.dbHost=cmsonr5-v.cern.ch
 confdb1.dbPort=10121
-confdb1.dbName=OMDS
+confdb1.dbName=cms_rcms.cern.ch
 confdb1.dbUser=cms_hlt_writer
 
-confdb2.dbSetup=MySQL Local
-confdb2.dbType=mysql
-confdb2.dbHost=localhost
-confdb2.dbPort=3306
-confdb2.dbName=hltdb
-confdb2.dbUser=username
+confdb2.dbSetup=OMDS (OLD DAQ)
+confdb2.dbType=oracle
+confdb2.dbHost=oracms.cern.ch
+confdb2.dbPort=10121
+confdb2.dbName=OMDS
+confdb2.dbUser=cms_hlt_writer
 
-confdb3.dbSetup=Oracle XE Local
-confdb3.dbType=oracle
+confdb3.dbSetup=MySQL Local
+confdb3.dbType=mysql
 confdb3.dbHost=localhost
-confdb3.dbPort=1521
-confdb3.dbName=XE
+confdb3.dbPort=3306
+confdb3.dbName=hltdb
 confdb3.dbUser=username
 
-confdb.dbName=OMDS
+confdb4.dbSetup=Oracle XE Local
+confdb4.dbType=oracle
+confdb4.dbHost=localhost
+confdb4.dbPort=1521
+confdb4.dbName=XE
+confdb4.dbUser=username
+
+confdb.dbName=cms_rcms.cern.ch
 confdb.dbType=oracle
-confdb.dbHost=oracms.cern.ch
+confdb.dbHost=cmsonr5-v.cern.ch
 confdb.dbUser=cms_hlt_reader
 confdb.dbPwrd=convertme!
