@@ -234,7 +234,7 @@ public class OnlineConverter extends ConverterBase
     {
 	ArrayList<Parameter> params = new ArrayList<Parameter>();
 	params.add(new StringParameter("streamLabel", "", true, false));
-	params.add(new Int32Parameter("maxSize", "1073741824", true, false));
+	params.add(new Int32Parameter("maxSize", "1024", true, false));
 	params.add(new PSetParameter("SelectEvents", "", false, false));
 	return new ModuleTemplate("EventStreamFileWriter", "UNKNOWN", -1,
 				  params, "OutputModule");
